--- a/envs/JSBSim/configs/1/heading.yaml
+++ b/envs/JSBSim/configs/1/heading.yaml
@@ -3,10 +3,10 @@ task: heading
 
 # simulation config
 sim_freq: 60
-agent_interaction_steps: 12 # step 0.2s
+agent_interaction_steps: 1 # 表示每发送一次动作，仿真器运行多少拍，交互一步的物理时间就是agent_interstep_steps/sim_freq
 
 # termination config
-max_steps: 1000             # episode length: 200s
+max_steps: 12000             # episode length: 200s
 altitude_limit: 2500
 acceleration_limit_x: 10.0
 acceleration_limit_y: 10.0
